fixing scroll bug on safari

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -880,7 +880,7 @@ th:active
 
   &.scrollable
     position: relative
-    height: 320px
+    height: 400px
 
     .heading
       position: absolute
@@ -1272,8 +1272,6 @@ th:active
 /*  List widget
 /*-----------------------------------------------------------------------------------*/
 .list
-  min-height: 400px
-
   ul
     list-style: none
     padding-left: 15px
@@ -1355,10 +1353,33 @@ th:active
               color: #f7c310
 
 /*-----------------------------------------------------------------------------------*/
+/*  Rollodex Styles
+/*-----------------------------------------------------------------------------------*/
+.rollodex
+  height: 500px !important
+
+  img
+    border-radius: 50%
+
+  ul li
+    &:only-child
+      border: 0
+
+.roll-title
+  background: #efefef
+  width: 100%
+  text-align: center
+  padding: 2px 0 2px 0
+  margin: 1px 0 1px 0
+
+.roll-item
+  padding: 20px 0 20px 0
+
+/*-----------------------------------------------------------------------------------*/
 /*  Chat widget
 /*-----------------------------------------------------------------------------------*/
 .chat
-  min-height: 500px
+  height: 500px !important
 
   .widget-content
     padding-bottom: 66px
@@ -1555,30 +1576,6 @@ th:active
 .jqvmap-ajax_response
   width: 100%
   height: 500px
-
-
-/*-----------------------------------------------------------------------------------*/
-/*  Rollodex Styles
-/*-----------------------------------------------------------------------------------*/
-.rollodex
-  min-height: 500px
-
-  img
-    border-radius: 50%
-
-  ul li
-    &:only-child
-      border: 0
-
-.roll-title
-  background: #efefef
-  width: 100%
-  text-align: center
-  padding: 2px 0 2px 0
-  margin: 1px 0 1px 0
-
-.roll-item
-  padding: 20px 0 20px 0
 
 
 /*-----------------------------------------------------------------------------------*/
@@ -1991,9 +1988,6 @@ button.close
 /*  Mobile Styles
 /*-----------------------------------------------------------------------------------*/
 @media (max-width: 979px)
-  body
-    padding-top: 80px
-
   .stats-container
     height: 470px
     [class^="col-"], [class*="col-"]
@@ -2001,14 +1995,12 @@ button.close
       padding-bottom: 12px
       height: auto
 
-  .bar-chart-widget .bar-chart-info .chart-number
-    font-size: 5em
 
-
-@media (max-width: 767px)
+@media (max-width: 768px)
   body
     left: 0
     @include transition(left .3s)
+    padding-top: 80px
 
     &.nav-open
       left: 200px
